--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="total">Total:</string>
     <string name="porPessoa">Por Pessoa:</string>
     <string name="calcular">Calcular</string>
+    <string name="nome">Pizzaria Horácio</string>
 </resources>
